Fixed Overflow

--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -7,10 +7,11 @@
 
 .Intro{
     
-    height: 80%;
+    height: 90%;
     width: 100%;
     background-color:$bgColour;
     color: $txtColour;
+    overflow: hidden;
 
     
     .wrapper{
